# Sage

./: .gitignore  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  update-homebrew-cask.yml
scripts/: clean-appledouble.mjs  gen-selfsigned-cert.sh
src/: App.css  App.tsx  events.ts  main.tsx  runtime.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  agent_cli.rs  agent_watch.rs  capture.rs  context.rs  context_macos.rs  lib.rs  llm.rs  memory.rs  pets.rs  privacy.rs  semantic.rs  semantic_macos.rs  semantic_windows.rs  sessions.rs  settings.rs  shell_path.rs  skills.rs  tools.rs
src-tauri/src/agent_cli/: claude.rs  codex.rs
src/components/: Composer.tsx  IpcContext.tsx  MessageList.tsx  SettingsDialog.tsx  ToolCallCard.tsx  UpdateSection.tsx  agentPermission.ts  copyText.ts  messageTime.ts
src/components/settings/: AboutSection.tsx  CompanionSection.tsx  GeneralSection.tsx  MemorySection.tsx  ModelField.tsx  ModelSection.tsx  PrivacySection.tsx  ProactiveSection.tsx  settingsForm.ts
src/i18n/: i18next.d.ts  index.ts
src/i18n/locales/: en.ts  ja.ts  zh-CN.ts  zh-TW.ts
src/ipc/: contract.ts  mock.ts  real.ts
src/llm/: backend.ts  budget.ts  loop.ts  models.ts  openrouter.ts
src/memory/: context.ts
src/observe/: context.ts  gate.ts  idle.ts  notable.ts  quota.ts  runObserve.ts  runner.ts  sampler.ts
src/store/: chat.ts  companion.ts  ipc.ts  observation.ts  persona.ts  settings.ts  settingsSync.ts
src/tools/: forgetMemory.ts  readFile.ts  recallMemory.ts  registry.ts  saveMemory.ts  types.ts  useSkill.ts
src/windows/: AvatarWindow.tsx  BubbleWindow.tsx  ChatWindow.tsx  PetSprite.tsx  SettingsWindow.tsx  avatar.css  bubble.css  chat.css  chatToggle.ts  companionTheme.ts  petAtlas.ts  settings.css  settingsWindow.ts  snapPosition.ts  useCompanionTheme.ts  useWander.ts  useWindowSizeMemory.ts  wander.ts
tests/: backend.test.ts  budget.test.ts  chatStore.test.ts  companionTheme.test.ts  context.test.ts  forgetMemory.test.ts  gate.test.ts  i18n.test.ts  idle.test.ts  loop.test.ts  memoryContext.test.ts  messageTime.test.ts  mock-ipc.test.ts  models.test.ts  notable.test.ts  openrouter.test.ts  petAtlas.test.ts  pets.test.ts  quota.test.ts  recallMemory.test.ts  runObserve.test.ts  sampler.test.ts  saveMemory.test.ts  skills.test.ts  snapPosition.test.ts  tools.test.ts  wander.test.ts
