[package]
name = "sage"
version = "0.3.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros"] }
base64 = "0.22"
active-win-pos-rs = "0.8"
regex = "1"
# dbus (not the default x11) on Linux: CI already ships libdbus-1-dev, and
# Wayland sessions have no XScreenSaver extension anyway.
user-idle = { version = "0.6", default-features = false, features = ["dbus"] }

[target.'cfg(target_os = "macos")'.dependencies]
# AX semantic snapshot backend (semantic_macos.rs): CFString/CFArray handling
# for the hand-declared AXUIElement FFI. Already a transitive dependency of
# active-win-pos-rs, so this adds no new code to the build.
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
# Safe wrapper over the UI Automation COM API — used by the Windows semantic
# snapshot backend (semantic_windows.rs).
uiautomation = "0.25"

