[package]
name = "sage"
version = "0.3.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros"] }
base64 = "0.22"
regex = "1"
# dbus (not the default x11) on Linux: CI already ships libdbus-1-dev, and
# Wayland sessions have no XScreenSaver extension anyway.
user-idle = { version = "0.6", default-features = false, features = ["dbus"] }

# Foreground window on Windows/Linux. NOT used on macOS: its backend there is
# CGWindowListCopyWindowInfo, and reading kCGWindowName off that list costs the
# Screen Recording TCC permission — context_macos.rs gets the same app name and
# title from NSWorkspace + the Accessibility API instead.
[target.'cfg(not(target_os = "macos"))'.dependencies]
active-win-pos-rs = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
# AX backend (semantic_macos.rs): CFString/CFArray handling for the
# hand-declared AXUIElement FFI.
core-foundation = "0.10"
# NSWorkspace.frontmostApplication (context_macos.rs) — foreground app name and
# pid with no TCC permission of any kind. Already in the tree via tauri/wry, so
# only the two class features below are new to the build.
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSWorkspace",
    "NSRunningApplication",
    "libc", # gates NSRunningApplication::processIdentifier
] }

[target.'cfg(target_os = "windows")'.dependencies]
# Safe wrapper over the UI Automation COM API — used by the Windows semantic
# snapshot backend (semantic_windows.rs).
uiautomation = "0.25"

